tests/diagnostic_golden/fixed_parse_continuation.diag
error[CF2004]: missing required identifier
  --> tests/diagnostic_golden/fixed_parse_continuation.f:3:8
   = stage: parser
   = help: see docs/errors.md#CF2004
  |
3 |      1 )
  |        ^ identifier required here
  ::: tests/diagnostic_golden\fixed_parse_continuation.f
  |
2 |       INTEGER A,
  |       ~~~~~~~~~~ continuation started here
   = note: The parser reached a position where an identifier is required to continue the declaration or statement.
   = help: Check trailing commas and continuation lines near this position.
